syntax = "proto3";

package livestack;

import  "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto"; 
// import "google/protobuf/any.proto";

service DBService {
  rpc GetJobRec(GetJobRecRequest) returns (GetJobRecResponse);
  rpc EnsureStreamRec(EnsureStreamRecRequest) returns (google.protobuf.Empty);
  rpc EnsureJobAndStatusAndConnectorRecs(EnsureJobAndStatusAndConnectorRecsRequest) returns (google.protobuf.Empty);
  rpc GetJobDatapoints(GetJobDatapointsRequest) returns (GetJobDatapointsResponse);
  // rpc AddDatapoint(AddDatapointRequest) returns (AddDatapointResponse);
}


message JobRec {
  string project_id = 1;
  string spec_name = 2; // Align with jobs.ts
  string job_id = 3;
  google.protobuf.Timestamp time_created = 4;
  google.protobuf.Struct job_params = 5;
}

message GetJobRecRequest {
  string projectId = 1;
  string specName = 2;
  string jobId = 3;
}

message JobRecAndStatus {
  JobRec rec = 1;
  string status = 2;
}

message GetJobRecResponse {
  oneof value {
    JobRecAndStatus rec = 1; // The actual response data
    google.protobuf.Empty null_response = 2; // Signal that the response is null
  }
}

message GetZZJobTestRequest {
  string id = 1;
}

message GetZZJobTestResponse {
  string projectId = 1;
  string pipeName = 2;
  string jobId = 3;
}

message EnsureStreamRecRequest {
  string project_id = 1;
  string stream_id = 2;
}

enum ConnectorType {
  IN = 0;
  OUT = 1;
}

// message EnsureJobStreamConnectorRecRequest {
//   string project_id = 1;
//   string stream_id = 2;
//   string job_id = 3;
//   string key = 4;
//   ConnectorType connector_type = 5;
// }

message EnsureJobAndStatusAndConnectorRecsRequest {
  string projectId = 1;
  string specName = 2;
  string jobId = 3;
  string jobOptionsStr = 4;
  optional string parentJobId = 5;
  optional string uniqueSpecLabel = 6;
  map<string, string> inputStreamIdOverridesByTag = 7;
  map<string, string> outputStreamIdOverridesByTag = 8;

}

message GetJobStreamConnectorRecsRequest {
  string project_id = 1;
  string job_id = 2;
  string key = 3;
  string connector_type = 4;
}

message JobStreamConnectorRecord {
  string project_id = 1;
  string job_id = 2;
  google.protobuf.Timestamp time_created = 3;
  string stream_id = 4;
  string key = 5;
  string connector_type = 6;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message GetJobDatapointsRequest {
  string projectId = 1;
  string specName = 2;
  string jobId = 3;
  string key = 4;
  ConnectorType ioType = 5;
  optional Order order = 7;
  optional int32 limit = 8;
}

message DatapointRecord {
  string datapointId = 1;
  string dataStr = 2;
}

message GetJobDatapointsResponse {
  repeated DatapointRecord points = 1;
}

message JobInfo {
  string jobId = 1;
  string outputTag = 2;
}

message AddDatapointRequest {
  string projectId = 1;
  string streamId = 2;
  string datapointId = 3;
  string dataStr = 4;
  optional JobInfo jobInfo = 5;
}

message AddDatapointResponse {
  string datapointId = 1;
}