syntax = "proto3";

package livestack;

// import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto"; 

service StreamService {
  rpc Pub(StreamPubMessage) returns (StreamPubResult);
  rpc Sub(SubRequest) returns (stream StreamDatapoint) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc valuesByReverseIndex(ValuesByReverseIndexRequest) returns (ValuesByReverseIndexResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };
  rpc lastValue(LastValueRequest) returns (LastValueResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };

  rpc EnsureStream(EnsureStreamRequest) returns (google.protobuf.Empty) {
    option idempotency_level = IDEMPOTENT;
  }
}


message EnsureStreamRequest {
  string project_uuid = 1;
  string stream_id = 2;
  optional string json_schema_str = 3;
}


message JobInfo {
  string jobId = 1;
  string outputTag = 2;
}

message ParentDataPointInfo {
  string streamId = 1;
  string datapointId = 2;
}

message StreamPubMessage {
  string projectUuid = 1;
  string streamId = 2;
  string dataStr = 3;
  repeated ParentDataPointInfo parentDatapoints = 4;
  optional JobInfo jobInfo = 5;
}

message StreamPubSuccessResult {
  string chunkId = 1;
  string datapointId = 2;
}

message StreamPubValidationFailure {
  string errorMessage = 1;
  string datapointId = 2;
}

message StreamPubResult {
  oneof result {
    StreamPubSuccessResult success = 1;
    StreamPubValidationFailure validationFailure = 2;
  }
}

enum SubType {
  fromStart = 0;
  fromNow = 1;
}

message SubRequest {
  string projectUuid = 1;
  string uniqueName = 2;
  SubType subType = 5;
}

message StreamDatapoint {
  uint64 timestamp = 1;
  string chunkId = 2;
  string dataStr = 3;
  string datapointId = 4;
}

message ValuesByReverseIndexRequest {
  string projectUuid = 1;
  string uniqueName = 2;
  uint64 lastN = 3;
}

message DataPointOrNull {
  oneof value {
    StreamDatapoint datapoint = 1;
    google.protobuf.Empty null_response = 2;
  }
}

message ValuesByReverseIndexResponse {
  repeated DataPointOrNull datapoints = 1;
}

message LastValueRequest {
  string projectUuid = 1;
  string uniqueName = 2;
}

message LastValueResponse {
  oneof value {
    StreamDatapoint datapoint = 1;
    google.protobuf.Empty null_response = 2;
  }
}
